--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.4.1",
-        "@types/node": "^16.11.26",
-        "@types/react": "^17.0.43",
-        "@types/react-dom": "^17.0.14",
+        "@types/node": "^17.0.23",
+        "@types/react": "^18.0.1",
+        "@types/react-dom": "^18.0.0",
         "primeflex": "^3.1.3",
         "primeicons": "^5.0.0",
         "primereact": "^7.2.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^17.0.0 || ^18.0.0",
+        "react-dom": "^17.0.0 || ^18.0.0",
         "react-jwt": "^1.1.4",
         "react-router-dom": "^6.2.2",
-        "react-scripts": "5.0.0",
+        "react-scripts": "^5.0.0",
         "react-toastify": "^8.2.0",
         "sass": "^1.49.9",
         "typescript": "^4.6.3",
